Closed Bug 1690000 Opened 5 years ago Closed 5 years ago

We are not restarting a transaction without Http3 if http3 fails and the origin route has the same hostname and port as the AltSvc route

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ff51ad2fc1e8 Always reset ConnInfo if it is using Http3. r=necko-reviewers,kershaw
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: