Bug 1690000 - Always reset ConnInfo if it is using Http3. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D103634